# psutils

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Makefile  Makefile.am  PSUtils.pm  README  README.md  bootstrap  bootstrap.conf  config.h  configure.ac  epsffit  epsffit-include.man  epsffit.1  epsffit.c  epsffit.in  epsffit.in.in  epsffit.man  extractres  extractres-include.man  extractres.1  extractres.in  extractres.in.in  extractres.man  fixdlsrps.man  fixdlsrps.pl  fixfmps  fixfmps.1  fixfmps.man  fixmacps.man  fixmacps.pl  fixpsditps.1  fixpsditps.man  fixpsditps.pl  fixpspps  fixpspps.man  (+90 more)
tests/: .gitignore  COPYRIGHT  Makefile.am  conftest.py  epsffit-aspect-expected.ps  epsffit-aspect.sh  epsffit-center-rotate-aspect-maximize.sh  epsffit-center-rotate-aspect.sh  epsffit-center-rotate-input.ps  epsffit-center-rotate-maximize.sh  epsffit-center-rotate.sh  epsffit-center.sh  epsffit-expected.ps  epsffit-maximize.sh  epsffit-rotate-aspect.sh  epsffit-rotate-maximize-expected.ps  epsffit-rotate-maximize.sh  epsffit-rotate.sh  epsffit-showpage.sh  epsffit.sh  extractres-and-includeres-expected.ps  extractres-and-includeres-input.ps  extractres-and-includeres.sh  extractres-input.ps  includeres-expected.ps  mktestfile  psbook-20-expected.ps  psbook-20-signature-4-expected.ps  psbook-20-signature-4-input.ps  psbook-20-signature-4.sh  psbook-20.sh  psbook-3-expected.ps  psbook-3-input.ps  psbook-3-signature-4-expected.ps  psbook-3-signature-4-input.ps  psbook-3-signature-4.sh  psbook-3.sh  psbook-invalid-signature-size.ps  psbook-invalid-signature-size.sh  psbook-test  (+154 more)
tests/epsffit-aspect/: input.ps
tests/epsffit-center/: test.sh
tests/epsffit-center-rotate/: test.sh
tests/epsffit-center-rotate-aspect-maximize/: test.sh
tests/epsffit-h-texlive/: test.sh
tests/epsffit-m-texlive/: expected.ps  test.sh
tests/epsffit-rotate/: test.sh
tests/epsffit-showpage/: expected.ps
tests/epsffit-v-texlive/: expected.ps  input.ps  test.sh
tests/extractres-and-includeres/: expected.ps  includeres-expected.ps  test.sh
tests/pdfbook-20/: test.sh
tests/pdfbook-20-signature-4/: test.sh
tests/pdfbook-3/: test.sh
tests/pdfbook-3-signature-4/: test.sh
tests/pdfbook-invalid-signature-size/: test.sh
tests/pdfbook-texlive/: test.sh
tests/pdfjoin-1-2/: test.sh
tests/pdfjoin-1-2-even/: test.sh
tests/pdfnup-20-1/: test.sh
tests/pdfnup-20-1-flip/: test.sh
tests/pdfnup-20-1-inpaper-A4-outpaper-A5/: test.sh
tests/pdfnup-20-1-inpaper-A5/: test.sh
tests/pdfnup-20-1-inpaper-A5-outpaper-A5/: test.sh
tests/pdfnup-20-2/: test.sh
tests/pdfnup-20-2-inpaper-A5/: test.sh
tests/pdfnup-20-3/: test.sh
tests/pdfnup-20-3-impossible-tolerance/: test.sh
tests/pdfnup-20-3-inpaper-A5/: test.sh
tests/pdfnup-20-3-rotatedleft/: test.sh
tests/pdfnup-20-3-rotatedright/: test.sh
tests/pdfnup-20-4/: test.sh
tests/pdfnup-20-4-297mmx210mm/: test.sh
tests/pdfnup-20-4-border-20/: test.sh
tests/pdfnup-20-4-columnmajor/: test.sh
tests/pdfnup-20-4-flip/: test.sh
tests/pdfnup-20-4-impossible-border/: test-settings.yaml  test.sh
tests/pdfnup-20-4-impossible-margin/: test.sh
tests/pdfnup-20-4-inpaper-A5/: test.sh
tests/pdfnup-20-4-margin-10/: test.sh
tests/pdfnup-draw/: test.sh
tests/pdfnup-texlive/: test.sh
tests/pdfresize-20-A3/: test.sh
tests/pdfresize-20-A3in-A4/: test.sh
tests/pdfresize-20-A4/: test.sh
tests/pdfresize-20-A5/: test.sh
tests/pdfresize-20-A5in-A4/: test.sh
tests/pdfresize-20-Letter/: test.sh
tests/pdfselect-even/: test.sh
tests/pdfselect-even-reverse/: test.sh
tests/pdfselect-individual-pages-and-dash-p/: test.sh
tests/pdfselect-invalid-pagerange/: test.sh
tests/pdfselect-negative-range/: test.sh
tests/pdfselect-odd/: test.sh
tests/pdfselect-options-and-complex-pagerange/: test.sh
tests/pdfselect-pdfnup-texlive/: test.sh
tests/pdfselect-positive-negative-range/: test.sh
tests/pdfselect-positive-range/: test.sh
tests/pdfselect-reverse/: test.sh
tests/pdfselect-texlive/: test.sh
tests/pdftopdf-correct-angles/: test.sh
tests/pdftopdf-invalid-pagespecs/: test.sh
tests/pdftopdf-multiple-pages/: test.sh
tests/pdftopdf-multiple-turns-and-flips/: test.sh
tests/pdftopdf-negative-offsets/: test.sh
tests/pdftopdf-offsets/: test.sh
tests/pdftopdf-texlive/: test.sh
tests/psbook-20/: expected.ps  input.ps
tests/psbook-3/: expected.ps  input.ps
tests/psbook-3-signature-4/: expected.ps
tests/psbook-invalid-signature-size/: input.ps
tests/psbook-texlive/: expected.ps  input.ps
tests/psjoin-1-2/: expected.ps  input.ps  test.sh
tests/psjoin-1-2-even/: expected.ps  test.sh
tests/psjoin-1-2-nostrip/: expected.ps  input.ps  test.sh
tests/psjoin-1-2-save/: expected.ps  test.sh
tests/psnup-20-1/: expected.ps
tests/psnup-20-1-flip/: input.ps  test.sh
tests/psnup-20-1-inpaper-A4-outpaper-A5/: expected.ps
tests/psnup-20-1-inpaper-A5/: expected.ps  input.ps
tests/psnup-20-1-inpaper-A5-outpaper-A5/: expected.ps  input.ps
tests/psnup-20-2/: input.ps
tests/psnup-20-2-inpaper-A5/: test.sh
tests/psnup-20-3-impossible-tolerance/: input.ps
tests/psnup-20-3-inpaper-A5/: expected.ps
tests/psnup-20-3-rotatedleft/: expected.ps
tests/psnup-20-4/: input.ps
tests/psnup-20-4-297mmx210mm/: input.ps  test.sh
tests/psnup-20-4-border-20/: expected.ps  input.ps
tests/psnup-20-4-columnmajor/: expected.ps
tests/psnup-20-4-flip/: expected.ps  test.sh
tests/psnup-20-4-impossible-border/: test.sh
tests/psnup-20-4-impossible-margin/: input.ps  test.sh
tests/psnup-20-4-margin-10/: expected.ps  input.ps
tests/psnup-draw/: expected.ps  input.ps  test.sh
tests/psnup-texlive/: expected.ps  test.sh
tests/psresize-20-A4/: expected.ps  input.ps
tests/psresize-20-A5/: expected.ps  test.sh
tests/psresize-20-A5in-A4/: expected.ps  input.ps
tests/psresize-20-Letter/: test.sh
tests/psselect-individual-pages-and-dash-p/: input.ps
tests/psselect-negative-range/: expected.ps  test.sh
tests/psselect-odd/: expected.ps  input.ps
tests/psselect-positive-range/: expected.ps  (+1 more)
(+229 files in other folders)
