[metadata]
name = psutils
author = Reuben Thomas
author_email = rrt@sc3d.org
home_page = https://github.com/rrthomas/psutils
version = 3.0
description = Manipulate PostScript documents
long_description = file: README.md
license = GPL v3 or later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages =
    psutils
python_requires = >= 3.9
install_requires =
    pypdf
setup_requires =
    argparse-manpage @ git+https://github.com/rrthomas/argparse-manpage-fix-include.git
    pytest-executable
    pypdf

[options.entry_points]
console_scripts =
    extractres = psutils.extractres:main
    epsffit = psutils.epsffit:main
    includeres = psutils.includeres:main
    pdfbook = psutils.pdfbook:main
    pdfjoin = psutils.pdfjoin:main
    pdfnup = psutils.pdfnup:main
    pdfresize = psutils.pdfresize:main
    pdfselect = psutils.pdfselect:main
    pdftopdf = psutils.pdftopdf:main
    psbook = psutils.psbook:main
    psjoin = psutils.psjoin:main
    psnup = psutils.psnup:main
    psresize = psutils.psresize:main
    psselect = psutils.psselect:main
    pstops = psutils.pstops:main

[build_manpages]
#manpages = rpl.1:module=rpl:function=get_parser:manual_title=User Commands:include=man-include.1
manpages = extractres.1:module=psutils.extractres:function=get_parser:manual_title=User Commands:include=extractres-include.man
    # extractres.1
    # epsffit.1
    # includeres.1
    # psbook.1
    # psjoin.1
    # psnup.1
    # psresize.1
    # psselect.1
    # pstops.1
    # psutils.1
