[metadata]
name = psutils
author = Reuben Thomas
author_email = rrt@sc3d.org
home_page = https://github.com/rrthomas/psutils
version = 3.0
description = Manipulate PDF and PostScript documents
long_description = file: README.md
license = GPL v3 or later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages =
    psutils
python_requires = >= 3.9
install_requires =
    pypdf >= 3.8.0
setup_requires =
    argparse-manpage @ git+https://github.com/rrthomas/argparse-manpage.git
    pytest-executable
    pypdf >= 3.8.0

[options.entry_points]
console_scripts =
    extractres = psutils.extractres:main
    epsffit = psutils.epsffit:main
    includeres = psutils.includeres:main
    pdfbook = psutils.pdfbook:main
    pdfjoin = psutils.pdfjoin:main
    pdfnup = psutils.pdfnup:main
    pdfresize = psutils.pdfresize:main
    pdfselect = psutils.pdfselect:main
    pdftopdf = psutils.pdftopdf:main
    psbook = psutils.psbook:main
    psjoin = psutils.psjoin:main
    psnup = psutils.psnup:main
    psresize = psutils.psresize:main
    psselect = psutils.psselect:main
    pstops = psutils.pstops:main

[build_manpages]
manpages =
    extractres.1:module=psutils.extractres:function=get_parser:manual_title=User Commands:include=extractres-include.man
    includeres.1:module=psutils.includeres:function=get_parser:manual_title=User Commands:include=includeres-include.man
    psbook.1:module=psutils.psbook:function=get_parser:manual_title=User Commands:include=psbook-include.man
    psjoin.1:module=psutils.psjoin:function=get_parser:manual_title=User Commands
    psnup.1:module=psutils.psnup:function=get_parser:manual_title=User Commands:include=psnup-include.man
    psresize.1:module=psutils.psresize:function=get_parser:manual_title=User Commands:include=psresize-include.man
    psselect.1:module=psutils.psselect:function=get_parser:manual_title=User Commands:include=psselect-include.man
    pstops.1:module=psutils.pstops:function=get_parser:manual_title=User Commands:include=pstops-include.man
    # psutils.1
